Исправлена проблема загрузки изображений

--- a/src/banks.pug
+++ b/src/banks.pug
@@ -5,7 +5,7 @@ head
   meta(http-equiv='X-UA-Compatible', content='ie=edge')
   title Лучшие банки для открытия счета | Найди Банк
   link(rel='stylesheet', href='css/main.css')
-  link(rel="icon" type="image/png" href="/img/favicon.png")
+  link(rel="icon" type="image/png" href="./img/favicon.png")
 body
   //= templates/header.pug
   //= templates/banks/hat.pug
