--- a/src/compare.pug
+++ b/src/compare.pug
@@ -6,7 +6,7 @@ head
   title Сравнение банковских тарифов на РКО | Найди банк
   link(rel='stylesheet', href='css/main.css')
   link(rel='stylesheet', href='css/jquery.scrollbar.css')
-  link(rel="icon" type="image/png" href="/img/favicon.png")
+  link(rel="icon" type="image/png" href="./img/favicon.png")
 body
   //= templates/header.pug
 
