--- a/src/templates/banks/hat.pug
+++ b/src/templates/banks/hat.pug
@@ -4,5 +4,5 @@
       .hat__info
         h1(data-wow-duration=".5s").wow.fadeInUp.mb-6.hat__title Лучшие банки для открытия счета
         p(data-wow-duration=".5s" data-wow-delay=".25s").wow.fadeInUp.grey.hat__desc Мы собрали подробную информацию о тарифах банков, чтобы вы могли сравнить их выбрать наилучший вариант для своего бизнеса
-        a(href="/compare.html" data-wow-duration=".5s" data-wow-delay=".5s").wow.fadeInUp.btn.mt-10 Сравнить условия
-      .hat__image: img(src="/img/bank.svg")
+        a(href="./compare.html" data-wow-duration=".5s" data-wow-delay=".5s").wow.fadeInUp.btn.mt-10 Сравнить условия
+      .hat__image: img(src="./img/bank.svg")
