--- a/src/templates/header.pug
+++ b/src/templates/header.pug
@@ -1,16 +1,16 @@
 .l-header
   .m-container
     .content
-      a(href="/").header__logo: img(src="/img/logo.svg")
+      a(href="./").header__logo: img(src="./img/logo.svg")
       .header__menu
-        a(href="/").header-menu__item Главная
-        a(href="/banks.html").header-menu__item Банки
-        a(href="/articles.html").header-menu__item Статьи
-        a(href="/compare.html").header-menu__item.btn.btn--small Сравнить условия
-        .header-menu__navbar#showMenu: img(src="/img/menu-button.svg")
+        a(href="./").header-menu__item Главная
+        a(href="./banks.html").header-menu__item Банки
+        a(href="./articles.html").header-menu__item Статьи
+        a(href="./compare.html").header-menu__item.btn.btn--small Сравнить условия
+        .header-menu__navbar#showMenu: img(src="./img/menu-button.svg")
   .header__menu.mobile
     .menu-wrapper
-      a(href="/").header-menu__item Главная
-      a(href="/banks.html").header-menu__item Банки
-      a(href="/articles.html").header-menu__item Статьи
-      a(href="/compare.html").header-menu__item.btn.btn--small Сравнить условия
+      a(href="./").header-menu__item Главная
+      a(href="./banks.html").header-menu__item Банки
+      a(href="./articles.html").header-menu__item Статьи
+      a(href="./compare.html").header-menu__item.btn.btn--small Сравнить условия
