--- a/src/templates/home/articles.pug
+++ b/src/templates/home/articles.pug
@@ -3,41 +3,41 @@
     .content
       h2(data-wow-duration=".5s").wow.fadeInUp.text-center.mb-15 Полезные статьи
       .m-grid-wrapper
-        a(href="/article/example.html" data-wow-duration=".5s" data-wow-delay=".1s").m-article-card.wow.fadeInUp
-          .article__image: img(src="/img/articles/example.jpg")
+        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".1s").m-article-card.wow.fadeInUp
+          .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
             
-        a(href="/article/example.html" data-wow-duration=".5s" data-wow-delay=".2s").m-article-card.wow.fadeInUp
-          .article__image: img(src="/img/articles/example.jpg")
+        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".2s").m-article-card.wow.fadeInUp
+          .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
 
-        a(href="/article/example.html" data-wow-duration=".5s" data-wow-delay=".3s").m-article-card.wow.fadeInUp
-          .article__image: img(src="/img/articles/example.jpg")
+        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".3s").m-article-card.wow.fadeInUp
+          .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
 
-        a(href="/article/example.html" data-wow-duration=".5s" data-wow-delay=".4s").m-article-card.wow.fadeInUp
-          .article__image: img(src="/img/articles/example.jpg")
+        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".4s").m-article-card.wow.fadeInUp
+          .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
 
-        a(href="/article/example.html" data-wow-duration=".5s" data-wow-delay=".5s").m-article-card.wow.fadeInUp
-          .article__image: img(src="/img/articles/example.jpg")
+        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".5s").m-article-card.wow.fadeInUp
+          .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
 
-        a(href="/article/example.html" data-wow-duration=".5s" data-wow-delay=".6s").m-article-card.wow.fadeInUp
-          .article__image: img(src="/img/articles/example.jpg")
+        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".6s").m-article-card.wow.fadeInUp
+          .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
           
 
-      p.text-center: a(href="/articles.html" data-wow-duration=".5s" data-wow-delay=".75s").wow.fadeInUp.btn.mt-15 Все статьи
+      p.text-center: a(href="./articles.html" data-wow-duration=".5s" data-wow-delay=".75s").wow.fadeInUp.btn.mt-15 Все статьи
