--- a/src/templates/home/hat.pug
+++ b/src/templates/home/hat.pug
@@ -5,4 +5,4 @@
         h1(data-wow-duration=".5s").mb-6.hat__title.wow.fadeInUp Банки с выгодными тарифами на РКО для ИП и ООО в России
         p(data-wow-duration=".5s" data-wow-delay=".25s").grey.hat__desc.wow.fadeInUp Мы собрали подробную информацию о тарифах банков, чтобы вы могли сравнить их выбрать наилучший вариант для своего бизнеса
         a(data-wow-duration=".5s" data-wow-delay=".5s").btn.mt-10.wow.fadeInUp Сравнить условия
-      .hat__image: img(src="/img/hat-image.png" data-wow-duration="1s").wow.fadeIn
+      .hat__image: img(src="./img/hat-image.png" data-wow-duration="1s").wow.fadeIn
