--- a/src/articles.pug
+++ b/src/articles.pug
@@ -5,7 +5,7 @@ head
   meta(http-equiv='X-UA-Compatible', content='ie=edge')
   title Полезные статьи | Найди Банк
   link(rel='stylesheet', href='css/main.css')
-  link(rel="icon" type="image/png" href="/img/favicon.png")
+  link(rel="icon" type="image/png" href="./img/favicon.png")
 body
   //= templates/header.pug
   //= templates/articles/articles-list.pug
