--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,7 @@ head
   link(rel='stylesheet', href='css/main.css')
   link(rel="stylesheet" href="css/owl.carousel.min.css")
   link(rel="stylesheet" href="css/owl.theme.default.min.css")
-  link(rel="icon" type="image/png" href="/img/favicon.png")
+  link(rel="icon" type="image/png" href="./img/favicon.png")
 body
   //= templates/header.pug
   //= templates/home/hat.pug
