--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -4,9 +4,9 @@
       a(href="/").footer__logo: img(src="/img/logo-white.svg")
       .footer__menu
         a(href="/").footer-menu__item Главная
-        a(href="/banks.html").footer-menu__item Банки
-        a(href="/articles.html").footer-menu__item Статьи
-        a(href="/compare.html").footer-menu__item Сравнить условия
+        a(href="./banks.html").footer-menu__item Банки
+        a(href="./articles.html").footer-menu__item Статьи
+        a(href="./compare.html").footer-menu__item Сравнить условия
 
     .content.site-info
       p © НайдиБанк.рф 2020
