--- a/src/compare.pug
+++ b/src/compare.pug
@@ -24,7 +24,7 @@ body
                 td.add-bank-wrapper
                   .m-dropdown#add-bank
                     a.btn.btn--small.btn--icon
-                      img(src="/img/plus.svg")
+                      img(src="./img/plus.svg")
                       span Добавить банк
                     .dropdown-menu
                       //- Options will be here
@@ -46,33 +46,6 @@ body
 
               tr
                 td.leading.pa-4
-
-
-            //- td.compare__item.bank
-            //-   .compare-item__row.bank-row
-            //-     img(src="/img/banks/tinkoff.png").bank__logo
-            //-     h3.bank__title Tinkoff Банк
-            //-   .compare-item__row 0р
-            //-   .compare-item__row Первые 3 или 10 бесплатно, далее – 19, 29 и 49 рублей (зависит от тарифа)
-            //-   .compare-item__row От 0,1% (минимум 290 р.) до 0,2% (максимум 29 000 р.)
-            //-   .compare-item__row 0р
-            //-   .compare-item__row Первые 3 или 10 бесплатно, далее – 19, 29 и 49 рублей (зависит от тарифа)
-            //-   .compare-item__row От 0,1% (минимум 290 р.) до 0,2% (максимум 29 000 р.)
-            //-   .compare-item__row: a.btn.btn--small Оформить
-
-            //- td.compare__item.bank
-            //-   .compare-item__row.bank-row
-            //-     img(src="/img/banks/tinkoff.png").bank__logo
-            //-     h3.bank__title Tinkoff Банк
-            //-   .compare-item__row 0р
-            //-   .compare-item__row Первые 3 или 10 бесплатно, далее – 19, 29 и 49 рублей (зависит от тарифа)
-            //-   .compare-item__row От 0,1% (минимум 290 р.) до 0,2% (максимум 29 000 р.)
-            //-   .compare-item__row 0р
-            //-   .compare-item__row Первые 3 или 10 бесплатно, далее – 19, 29 и 49 рублей (зависит от тарифа)
-            //-   .compare-item__row От 0,1% (минимум 290 р.) до 0,2% (максимум 29 000 р.)
-            //-   .compare-item__row: a.btn.btn--small Оформить
-
-
 
   //= templates/footer.pug
   
