--- a/src/templates/articles/more-articles.pug
+++ b/src/templates/articles/more-articles.pug
@@ -2,20 +2,20 @@
   .m-container
     .content
       .m-grid-wrapper
-        a(href="./article/example.html").m-article-card
-          .article__image: img(src="./img/articles/example.jpg")
+        a(href="#").m-article-card
+          .article__image: img(src="#")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
             
-        a(href="./article/example.html").m-article-card
-          .article__image: img(src="./img/articles/example.jpg")
+        a(href="#").m-article-card
+          .article__image: img(src="#")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
 
-        a(href="./article/example.html").m-article-card
-          .article__image: img(src="./img/articles/example.jpg")
+        a(href="#").m-article-card
+          .article__image: img(src="#")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
