--- a/src/templates/banks/banks-list.pug
+++ b/src/templates/banks/banks-list.pug
@@ -2,7 +2,7 @@
   .m-container
     .content
       .m-grid-wrapper
-        a(href="./article/bank.html" data-wow-duration=".5s").wow.fadeInUp.m-bank-card.tinkoff
+        a(href="#" data-wow-duration=".5s").wow.fadeInUp.m-bank-card.tinkoff
           img(src="./img/banks/tinkoff.png").bank__logo
           h3.bank__title Tinkoff Банк
           .bank__info 
@@ -11,7 +11,7 @@
             p Возврат до 6% на остаток по счету
           .bank__arrow: img(src="./img/arrow.svg")
 
-        a(href="./article/bank.html" data-wow-duration=".5s" data-wow-delay=".1s").wow.fadeInUp.m-bank-card.tinkoff
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".1s").wow.fadeInUp.m-bank-card.tinkoff
           img(src="./img/banks/tinkoff.png").bank__logo
           h3.bank__title Tinkoff Банк
           .bank__info 
@@ -20,7 +20,7 @@
             p Возврат до 6% на остаток по счету
           .bank__arrow: img(src="./img/arrow.svg")
 
-        a(href="./article/bank.html" data-wow-duration=".5s" data-wow-delay=".2s").wow.fadeInUp.m-bank-card.tinkoff
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".2s").wow.fadeInUp.m-bank-card.tinkoff
           img(src="./img/banks/tinkoff.png").bank__logo
           h3.bank__title Tinkoff Банк
           .bank__info 
@@ -29,7 +29,7 @@
             p Возврат до 6% на остаток по счету
           .bank__arrow: img(src="./img/arrow.svg")
 
-        a(href="./article/bank.html" data-wow-duration=".5s" data-wow-delay=".3s").wow.fadeInUp.m-bank-card.tinkoff
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".3s").wow.fadeInUp.m-bank-card.tinkoff
           img(src="./img/banks/tinkoff.png").bank__logo
           h3.bank__title Tinkoff Банк
           .bank__info 
@@ -38,7 +38,7 @@
             p Возврат до 6% на остаток по счету
           .bank__arrow: img(src="./img/arrow.svg")
 
-        a(href="./article/bank.html" data-wow-duration=".5s" data-wow-delay=".4s").wow.fadeInUp.m-bank-card.tinkoff
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".4s").wow.fadeInUp.m-bank-card.tinkoff
           img(src="./img/banks/tinkoff.png").bank__logo
           h3.bank__title Tinkoff Банк
           .bank__info 
@@ -47,7 +47,7 @@
             p Возврат до 6% на остаток по счету
           .bank__arrow: img(src="/img/arrow.svg")
 
-        a(href="./article/bank.html" data-wow-duration=".5s" data-wow-delay=".5s").wow.fadeInUp.m-bank-card.tinkoff
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".5s").wow.fadeInUp.m-bank-card.tinkoff
           img(src="./img/banks/tinkoff.png").bank__logo
           h3.bank__title Tinkoff Банк
           .bank__info 
