--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -1,9 +1,9 @@
 .l-footer
   .m-container
     .content
-      a(href="/").footer__logo: img(src="/img/logo-white.svg")
+      a(href="./").footer__logo: img(src="./img/logo-white.svg")
       .footer__menu
-        a(href="/").footer-menu__item Главная
+        a(href="./").footer-menu__item Главная
         a(href="./banks.html").footer-menu__item Банки
         a(href="./articles.html").footer-menu__item Статьи
         a(href="./compare.html").footer-menu__item Сравнить условия
