--- a/src/templates/articles/articles-list.pug
+++ b/src/templates/articles/articles-list.pug
@@ -3,37 +3,37 @@
     .content
       h2(data-wow-duration=".5s").wow.fadeInUp.text-center.mb-20 Полезные статьи
       .m-grid-wrapper
-        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".1s").wow.fadeInUp.m-article-card
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".1s").wow.fadeInUp.m-article-card
           .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
             
-        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".2s").wow.fadeInUp.m-article-card
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".2s").wow.fadeInUp.m-article-card
           .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
 
-        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".3s").wow.fadeInUp.m-article-card
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".3s").wow.fadeInUp.m-article-card
           .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
 
-        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".4s").wow.fadeInUp.m-article-card
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".4s").wow.fadeInUp.m-article-card
           .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
 
-        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".5s").wow.fadeInUp.m-article-card
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".5s").wow.fadeInUp.m-article-card
           .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
             .article__link Читать статью
 
-        a(href="./article/example.html" data-wow-duration=".5s" data-wow-delay=".6s").wow.fadeInUp.m-article-card
+        a(href="#" data-wow-duration=".5s" data-wow-delay=".6s").wow.fadeInUp.m-article-card
           .article__image: img(src="./img/articles/example.jpg")
           .article__info
             h4.article__title Где выгодно открыть расчетный счет для ИП и ООО в 2019 году
